# gpt_study

./: links.md  main.py  pyproject.toml
basic/: arange.py  linear.py  logistic_reg.py
ch02/: edith-wharton.txt  s2_6_dataset.py  s2_7_embed.py  s2_8_dataloader.py
ch02/.ipynb_checkpoints/: 2.2_read-verdict-checkpoint.py  2.5_tiktoken-checkpoint.ipynb  2.6_sliding-checkpoint.ipynb  read-verdict-checkpoint.ipynb
ch03/: __init__.py  s3_3_attention.py  s3_4_attention_w.py  s3_4_linear.py  s3_4_self_attn_v1.py  s3_4_self_attn_v2.py  s3_5_self_attn_v2.py  s3_5_torch.py  s3_6_multi_head.py  s3_6_multi_head2.py  s3_6_multi_head2_by_chatgpt.py
ch04/: s4_1_dummy_gpt.py  s4_2_layernorm.py  s4_2_relu.py  s4_3_feedforward.py  s4_4_shortcut.py  s4_5_transformer.py  s4_6_gptmodel.py  s4_7_gentext_simple.py
